force-app/main/default/objects/Employee__c/fields/Social_Page__c.field-meta.xml
<CustomField>
    <fullName>Social_Page__c</fullName>
    <label>Social Page</label>
    <type>Url</type>
</CustomField>