force-app/main/default/objects/Employee__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>counrty__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Uttarakhand</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Manipur</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Holland</fullName>
            </value>
            <value>
                <fullName>Zeeland</fullName>
            </value>
            <value>
                <fullName>Groningen</fullName>
            </value>
            <value>
                <fullName>Flevoland</fullName>
            </value>
            <value>
                <fullName>Friesland</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Valencia</fullName>
            </value>
            <value>
                <fullName>Zaragoza</fullName>
            </value>
            <value>
                <fullName>Seville</fullName>
            </value>
            <value>
                <fullName>Málaga</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Hokkaido</fullName>
            </value>
            <value>
                <fullName>Honshu</fullName>
            </value>
            <value>
                <fullName>Shikoku</fullName>
            </value>
            <value>
                <fullName>Kyushu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>