force-app/main/default/objects/Employee__c/fields/Total_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Leave__c</fullName>
    <label>Total Leave</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>