force-app/main/default/objects/Employee__c/fields/Total_leaves_availed__c.field-meta.xml
<CustomField>
    <fullName>Total_leaves_availed__c</fullName>
    <label>Total leaves availed</label>
    <summarizedField>leave_application__c.Number_of_days__c</summarizedField>
    <summaryFilterItems>
        <field>leave_application__c.Leave_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>leave_application__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>