force-app/main/default/objects/Employee__c/validationRules/Joining_date_not_Before_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_date_not_Before_creation</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Joining__c  &lt;  TODAY()</errorConditionFormula>
    <errorMessage>Joining date cannot be before creation date</errorMessage>
</ValidationRule>