force-app/main/default/objects/Employee__c/validationRules/Total_leaves_not_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_leaves_not_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Leave__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Leave__c</errorDisplayField>
    <errorMessage>Total leaves cannot be a negative value</errorMessage>
</ValidationRule>